src/test/resources/frontendReference/invalid/syntaxErr/variables/badintAssignments2.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:11 -- extraneous input 'A4' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'end', ';'}
1 parser error(s) detected, no further compilation attempted.
